clusters/production/apps/mattermost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost
  namespace: mattermost
spec:
  selector:
    app: mattermost
  ports:
  - port: 8065
    targetPort: 8065
